# backend/pkg/api/analytic.pb.go
@@ -1,0 +1,248 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.6
+// 	protoc        v3.21.12
+// source: analytic.proto
+
+package api
+
+import (
+	_ "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2/options"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type AnalyzeRequest struct {
+	state                                 protoimpl.MessageState `protogen:"open.v1"`
+	RatingToPrestige                      int32                  `protobuf:"varint,1,opt,name=ratingToPrestige,proto3" json:"ratingToPrestige,omitempty"`
+	RatingToEducationQuality              int32                  `protobuf:"varint,2,opt,name=ratingToEducationQuality,proto3" json:"ratingToEducationQuality,omitempty"`
+	RatingToScholarshipPrograms           int32                  `protobuf:"varint,3,opt,name=ratingToScholarshipPrograms,proto3" json:"ratingToScholarshipPrograms,omitempty"`
+	PrestigeToEducationQuality            int32                  `protobuf:"varint,4,opt,name=prestigeToEducationQuality,proto3" json:"prestigeToEducationQuality,omitempty"`
+	PrestigeToScholarshipPrograms         int32                  `protobuf:"varint,5,opt,name=prestigeToScholarshipPrograms,proto3" json:"prestigeToScholarshipPrograms,omitempty"`
+	EducationQualityToScholarshipPrograms int32                  `protobuf:"varint,6,opt,name=educationQualityToScholarshipPrograms,proto3" json:"educationQualityToScholarshipPrograms,omitempty"`
+	Dormitory                             bool                   `protobuf:"varint,7,opt,name=dormitory,proto3" json:"dormitory,omitempty"`
+	ScientificLabs                        bool                   `protobuf:"varint,8,opt,name=scientificLabs,proto3" json:"scientificLabs,omitempty"`
+	SportsInfrastructure                  bool                   `protobuf:"varint,9,opt,name=sportsInfrastructure,proto3" json:"sportsInfrastructure,omitempty"`
+	EducationCost                         int64                  `protobuf:"varint,10,opt,name=educationCost,proto3" json:"educationCost,omitempty"`
+	unknownFields                         protoimpl.UnknownFields
+	sizeCache                             protoimpl.SizeCache
+}
+
+func (x *AnalyzeRequest) Reset() {
+	*x = AnalyzeRequest{}
+	mi := &file_analytic_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *AnalyzeRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AnalyzeRequest) ProtoMessage() {}
+
+func (x *AnalyzeRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_analytic_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AnalyzeRequest.ProtoReflect.Descriptor instead.
+func (*AnalyzeRequest) Descriptor() ([]byte, []int) {
+	return file_analytic_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *AnalyzeRequest) GetRatingToPrestige() int32 {
+	if x != nil {
+		return x.RatingToPrestige
+	}
+	return 0
+}
+
+func (x *AnalyzeRequest) GetRatingToEducationQuality() int32 {
+	if x != nil {
+		return x.RatingToEducationQuality
+	}
+	return 0
+}
+
+func (x *AnalyzeRequest) GetRatingToScholarshipPrograms() int32 {
+	if x != nil {
+		return x.RatingToScholarshipPrograms
+	}
+	return 0
+}
+
+func (x *AnalyzeRequest) GetPrestigeToEducationQuality() int32 {
+	if x != nil {
+		return x.PrestigeToEducationQuality
+	}
+	return 0
+}
+
+func (x *AnalyzeRequest) GetPrestigeToScholarshipPrograms() int32 {
+	if x != nil {
+		return x.PrestigeToScholarshipPrograms
+	}
+	return 0
+}
+
+func (x *AnalyzeRequest) GetEducationQualityToScholarshipPrograms() int32 {
+	if x != nil {
+		return x.EducationQualityToScholarshipPrograms
+	}
+	return 0
+}
+
+func (x *AnalyzeRequest) GetDormitory() bool {
+	if x != nil {
+		return x.Dormitory
+	}
+	return false
+}
+
+func (x *AnalyzeRequest) GetScientificLabs() bool {
+	if x != nil {
+		return x.ScientificLabs
+	}
+	return false
+}
+
+func (x *AnalyzeRequest) GetSportsInfrastructure() bool {
+	if x != nil {
+		return x.SportsInfrastructure
+	}
+	return false
+}
+
+func (x *AnalyzeRequest) GetEducationCost() int64 {
+	if x != nil {
+		return x.EducationCost
+	}
+	return 0
+}
+
+type AnalyzeResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *AnalyzeResponse) Reset() {
+	*x = AnalyzeResponse{}
+	mi := &file_analytic_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *AnalyzeResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*AnalyzeResponse) ProtoMessage() {}
+
+func (x *AnalyzeResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_analytic_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use AnalyzeResponse.ProtoReflect.Descriptor instead.
+func (*AnalyzeResponse) Descriptor() ([]byte, []int) {
+	return file_analytic_proto_rawDescGZIP(), []int{1}
+}
+
+var File_analytic_proto protoreflect.FileDescriptor
+
+const file_analytic_proto_rawDesc = "" +
+	"\n" +
+	"\x0eanalytic.proto\x12\x03api\x1a\x1cgoogle/api/annotations.proto\x1a\x18google/api/openapi.proto\"\xb6\x04\n" +
+	"\x0eAnalyzeRequest\x12*\n" +
+	"\x10ratingToPrestige\x18\x01 \x01(\x05R\x10ratingToPrestige\x12:\n" +
+	"\x18ratingToEducationQuality\x18\x02 \x01(\x05R\x18ratingToEducationQuality\x12@\n" +
+	"\x1bratingToScholarshipPrograms\x18\x03 \x01(\x05R\x1bratingToScholarshipPrograms\x12>\n" +
+	"\x1aprestigeToEducationQuality\x18\x04 \x01(\x05R\x1aprestigeToEducationQuality\x12D\n" +
+	"\x1dprestigeToScholarshipPrograms\x18\x05 \x01(\x05R\x1dprestigeToScholarshipPrograms\x12T\n" +
+	"%educationQualityToScholarshipPrograms\x18\x06 \x01(\x05R%educationQualityToScholarshipPrograms\x12\x1c\n" +
+	"\tdormitory\x18\a \x01(\bR\tdormitory\x12&\n" +
+	"\x0escientificLabs\x18\b \x01(\bR\x0escientificLabs\x122\n" +
+	"\x14sportsInfrastructure\x18\t \x01(\bR\x14sportsInfrastructure\x12$\n" +
+	"\reducationCost\x18\n" +
+	" \x01(\x03R\reducationCost\"\x11\n" +
+	"\x0fAnalyzeResponse2b\n" +
+	"\bAnalytic\x12V\n" +
+	"\aAnalyze\x12\x13.api.AnalyzeRequest\x1a\x14.api.AnalyzeResponse\" \x82\xd3\xe4\x93\x02\x1a:\x01*\"\x15/api/analytic/analyzeB&\x92A\x12\x1a\flocalhost:80*\x02\x01\x02Z\x0fbackend/pkg/apib\x06proto3"
+
+var (
+	file_analytic_proto_rawDescOnce sync.Once
+	file_analytic_proto_rawDescData []byte
+)
+
+func file_analytic_proto_rawDescGZIP() []byte {
+	file_analytic_proto_rawDescOnce.Do(func() {
+		file_analytic_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_analytic_proto_rawDesc), len(file_analytic_proto_rawDesc)))
+	})
+	return file_analytic_proto_rawDescData
+}
+
+var file_analytic_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_analytic_proto_goTypes = []any{
+	(*AnalyzeRequest)(nil),  // 0: api.AnalyzeRequest
+	(*AnalyzeResponse)(nil), // 1: api.AnalyzeResponse
+}
+var file_analytic_proto_depIdxs = []int32{
+	0, // 0: api.Analytic.Analyze:input_type -> api.AnalyzeRequest
+	1, // 1: api.Analytic.Analyze:output_type -> api.AnalyzeResponse
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_analytic_proto_init() }
+func file_analytic_proto_init() {
+	if File_analytic_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_analytic_proto_rawDesc), len(file_analytic_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_analytic_proto_goTypes,
+		DependencyIndexes: file_analytic_proto_depIdxs,
+		MessageInfos:      file_analytic_proto_msgTypes,
+	}.Build()
+	File_analytic_proto = out.File
+	file_analytic_proto_goTypes = nil
+	file_analytic_proto_depIdxs = nil
+}
