# backend/pkg/api/analytic_grpc.pb.go
@@ -1,0 +1,121 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             v3.21.12
+// source: analytic.proto
+
+package api
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Analytic_Analyze_FullMethodName = "/api.Analytic/Analyze"
+)
+
+// AnalyticClient is the client API for Analytic service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type AnalyticClient interface {
+	Analyze(ctx context.Context, in *AnalyzeRequest, opts ...grpc.CallOption) (*AnalyzeResponse, error)
+}
+
+type analyticClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewAnalyticClient(cc grpc.ClientConnInterface) AnalyticClient {
+	return &analyticClient{cc}
+}
+
+func (c *analyticClient) Analyze(ctx context.Context, in *AnalyzeRequest, opts ...grpc.CallOption) (*AnalyzeResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(AnalyzeResponse)
+	err := c.cc.Invoke(ctx, Analytic_Analyze_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// AnalyticServer is the server API for Analytic service.
+// All implementations must embed UnimplementedAnalyticServer
+// for forward compatibility.
+type AnalyticServer interface {
+	Analyze(context.Context, *AnalyzeRequest) (*AnalyzeResponse, error)
+	mustEmbedUnimplementedAnalyticServer()
+}
+
+// UnimplementedAnalyticServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedAnalyticServer struct{}
+
+func (UnimplementedAnalyticServer) Analyze(context.Context, *AnalyzeRequest) (*AnalyzeResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method Analyze not implemented")
+}
+func (UnimplementedAnalyticServer) mustEmbedUnimplementedAnalyticServer() {}
+func (UnimplementedAnalyticServer) testEmbeddedByValue()                  {}
+
+// UnsafeAnalyticServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to AnalyticServer will
+// result in compilation errors.
+type UnsafeAnalyticServer interface {
+	mustEmbedUnimplementedAnalyticServer()
+}
+
+func RegisterAnalyticServer(s grpc.ServiceRegistrar, srv AnalyticServer) {
+	// If the following call pancis, it indicates UnimplementedAnalyticServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Analytic_ServiceDesc, srv)
+}
+
+func _Analytic_Analyze_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(AnalyzeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AnalyticServer).Analyze(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Analytic_Analyze_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AnalyticServer).Analyze(ctx, req.(*AnalyzeRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Analytic_ServiceDesc is the grpc.ServiceDesc for Analytic service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Analytic_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.Analytic",
+	HandlerType: (*AnalyticServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Analyze",
+			Handler:    _Analytic_Analyze_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "analytic.proto",
+}
